--- a/.github/workflows/nightly-ci.yml
+++ b/.github/workflows/nightly-ci.yml
@@ -5,14 +5,14 @@
 name: Nightly
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 16 * * *' # UTC 16:00 / GMT+8 0:00, daily
+  #schedule:
+  #  - cron: '0 16 * * *' # UTC 16:00 / GMT+8 0:00, daily
 
 env:
   CI_NAME: Nightly CI
 jobs:
   build:
-    if: ${{ github.repository == 'osfans/trime' && github.ref == 'refs/heads/develop' }}
+    if: ${{ github.ref == 'refs/heads/develop' }}
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout
